# unit-2024

./: main.py  pyproject.toml  pyside.py  try_sending_data.py
can-sdk/: pyproject.toml
can-sdk/can_sdk/: client.py  config.py
frontend/: config_system.json  config_user.json  config_user_backup.json  main.py  ondratest.py  pyproject.toml  pyside.py  pyside_test.py
